# qrar-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  qr-code-generator.cpp  students-data-utils.c  students-data-utils.h  students-data.c  students-data.json  utils.cpp  utils.hpp  utils.tpp
